fix: make border radius visible in popovers

--- a/public/css/clustermap.css
+++ b/public/css/clustermap.css
@@ -115,7 +115,6 @@ body {
     font-weight: bold;
     width: 100%;
     text-align: center;
-    background: var(--background-color)!important;
     color: var(--foreground-color)!important;
 }
 
